[#8433] fix(common): Fix a JDK compatibility problem in URLEncoder (#8436)
### What changes were proposed in this pull request?

Replace method encode(String, Charset) with encode(String, String)

### Why are the changes needed?

Method singature encode(String, Charset) is not supported in JDK8

Fix: #8433

### Does this PR introduce _any_ user-facing change?

N/A.

### How was this patch tested?

Existing tests.